# onlineShop

./: .env  README.md  alembic.ini  pyproject.toml  Отчет_о_результатах_парного_программирования.docx
app/: config.py  database.py  main.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: 371d4f4424f0_initial_migration.py  3e65514edc98_first_migration.py  693d50cd3d0d_add_users_table.py
app/products/: dao.py  models.py  router.py  schemas.py
app/tests/: conftest.py  mock_products.json  mock_users.json
app/tests/unit_tests/test_products/: test_products.py
app/tests/unit_tests/test_users/: test_users.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py
docs/: pair-programming.md
front/: App.js  package-lock.json  package.json
